[tool.poetry]
name = "pishock"
version = "1.0.3"
description = "The bestest Python PiShock API wrapper and CLI!"
authors = ["Zerario <derg@zerario.dev>"]
readme = "README.md"
packages = [{include = "pishock", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
requests = "^2.31.0"
typer = "^0.9.0"
rich = "^13.7.0"
typing-extensions = "^4.9.0"
platformdirs = "^4.1.0"
pyserial = "^3.5"

[tool.poetry.scripts]
pishock = "pishock.zap.cli.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Documentation = "https://python-pishock.readthedocs.io/"
Repository = "https://github.com/zerario/Python-PiShock"
Issues = "https://github.com/zerario/Python-PiShock/issues"
Changelog = "https://python-pishock.readthedocs.io/en/latest/changelog.html"
